bk_ida/gccida/c1/scan_rtx
/data/output_dir/patch/gcc/ida/clang/O1/gcc-clang-O1/scan_rtx/src/regrename.c:1124:37: error: must use 'enum' tag to refer to type 'reg_class'
void  scan_rtx( rtx insn, rtx *loc, reg_class a3, scan_actions action, op_type type, int earlyclobber) 
                                    ^
                                    enum 
/data/output_dir/patch/gcc/ida/clang/O1/gcc-clang-O1/scan_rtx/src/regrename.c:1124:51: error: must use 'enum' tag to refer to type 'scan_actions'
void  scan_rtx( rtx insn, rtx *loc, reg_class a3, scan_actions action, op_type type, int earlyclobber) 
                                                  ^
                                                  enum 
/data/output_dir/patch/gcc/ida/clang/O1/gcc-clang-O1/scan_rtx/src/regrename.c:1124:72: error: must use 'enum' tag to refer to type 'op_type'
void  scan_rtx( rtx insn, rtx *loc, reg_class a3, scan_actions action, op_type type, int earlyclobber) 
                                                                       ^
                                                                       enum 
/data/output_dir/patch/gcc/ida/clang/O1/gcc-clang-O1/scan_rtx/src/regrename.c:1128:1: error: must use 'enum' tag to refer to type 'reg_class'
reg_class v9; // ebx 
^
enum 
/data/output_dir/patch/gcc/ida/clang/O1/gcc-clang-O1/scan_rtx/src/regrename.c:1129:1: error: must use 'enum' tag to refer to type 'scan_actions'
scan_actions v10; // r14d 
^
enum 
/data/output_dir/patch/gcc/ida/clang/O1/gcc-clang-O1/scan_rtx/src/regrename.c:1130:1: error: must use 'enum' tag to refer to type 'reg_class'
reg_class v11; // r15d 
^
enum 
/data/output_dir/patch/gcc/ida/clang/O1/gcc-clang-O1/scan_rtx/src/regrename.c:1132:1: error: must use 'enum' tag to refer to type 'reg_class'
reg_class v13; // edx 
^
enum 
/data/output_dir/patch/gcc/ida/clang/O1/gcc-clang-O1/scan_rtx/src/regrename.c:1133:1: error: must use 'enum' tag to refer to type 'scan_actions'
scan_actions v14; // ecx 
^
enum 
/data/output_dir/patch/gcc/ida/clang/O1/gcc-clang-O1/scan_rtx/src/regrename.c:1134:1: error: must use 'enum' tag to refer to type 'op_type'
op_type v15; // r8d 
^
enum 
/data/output_dir/patch/gcc/ida/clang/O1/gcc-clang-O1/scan_rtx/src/regrename.c:1135:1: error: must use 'enum' tag to refer to type 'scan_actions'
scan_actions v16; // r15d 
^
enum 
/data/output_dir/patch/gcc/ida/clang/O1/gcc-clang-O1/scan_rtx/src/regrename.c:1136:1: error: must use 'enum' tag to refer to type 'reg_class'
reg_class v17; // ebx 
^
enum 
/data/output_dir/patch/gcc/ida/clang/O1/gcc-clang-O1/scan_rtx/src/regrename.c:1142:1: error: must use 'enum' tag to refer to type 'op_type'
op_type v23; // [rsp+8h] [rbp-50h] 
^
enum 
/data/output_dir/patch/gcc/ida/clang/O1/gcc-clang-O1/scan_rtx/src/regrename.c:1143:1: error: must use 'enum' tag to refer to type 'scan_actions'
scan_actions v24; // [rsp+Ch] [rbp-4Ch] 
^
enum 
/data/output_dir/patch/gcc/ida/clang/O1/gcc-clang-O1/scan_rtx/src/regrename.c:1209:48: error: use of undeclared identifier 'op_type'
scan_rtx( insn, ( rtx *)v7->fld, a3, action, ( op_type)( 2 * ( type != OP_IN)), earlyclobber); 
                                               ^
14 errors generated.
make: *** [/data/output_dir/patch/gcc/ida/clang/O1/gcc-clang-O1/scan_rtx/src/obj/regrename.o] Error 1
